--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@ layout: default
         <li>Specialist Visits (with higher copay)</li>
         <li>Sometimes medications. Usually covered on low deductible plans and not on high. Copays usually greater for non-generics</li>
       </ul>
+    </div>
   </div>
   <div class="unexpected">
     <h3>Unexpected things covered after deductible</h3>
