--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@ layout: default
   .amount-types-container {
     display: flex;
   }  
+  .amount-types-container>div {
+    padding: 0 10px;
+    border-left: 1px solid gray;
+    border-right: 1px solid gray;
+    min-width: 300px;
+  }
+  .main-content {
+    font-size: 1em !important;
+  }
+  h3 {
+    font-size: 1.1em;
+  }
 </style>
 
 <div class="amount-types-container">
